Changed the names of the classes to english

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 </head>
 <body>
-    <div class="contenedor-ventana ">
-        <img class="img-ventana " src="./images/image-qr-code.png" alt="image-qr-code">
-        <h3 class="titulo-ventana center">Improve your front-end skills by building projects</h3>
-        <p class="texto-ventana center">Scan the QR code to visit Frontend Mentor ant take your coding skills to the next level</p>
+    <div class="cont-window ">
+        <img class="img-window " src="./images/image-qr-code.png" alt="image-qr-code">
+        <h3 class="title-window center">Improve your front-end skills by building projects</h3>
+        <p class="text-window center">Scan the QR code to visit Frontend Mentor ant take your coding skills to the next level</p>
     </div>
     
 </body>
